rust_ggml/ffi_ggml/src/ggml_bindings.rs

#[test]
fn bindgen_test_layout_gguf_init_params() {
    assert_eq!(
        ::std::mem::size_of::<gguf_init_params>(),
        16usize,
        concat!("Size of: ", stringify!(gguf_init_params))
    );
    assert_eq!(
        ::std::mem::align_of::<gguf_init_params>(),
        8usize,
        concat!("Alignment of ", stringify!(gguf_init_params))
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<gguf_init_params>())).no_alloc as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(gguf_init_params),
            "::",
            stringify!(no_alloc)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<gguf_init_params>())).ctx as *const _ as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(gguf_init_params),
            "::",
            stringify!(ctx)
        )
    );
}
extern "C" {
    pub fn gguf_init_empty() -> *mut gguf_context;
}
extern "C" {
    pub fn gguf_init_from_file(
        fname: *const ::std::os::raw::c_char,
        params: gguf_init_params,
    ) -> *mut gguf_context;
}
extern "C" {
    pub fn gguf_free(ctx: *mut gguf_context);
}
extern "C" {
    pub fn gguf_type_name(type_: gguf_type) -> *const ::std::os::raw::c_char;
}
extern "C" {
    pub fn gguf_get_version(ctx: *const gguf_context) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn gguf_get_alignment(ctx: *const gguf_context) -> size_t;
}
extern "C" {
    pub fn gguf_get_data_offset(ctx: *const gguf_context) -> size_t;
}
extern "C" {
    pub fn gguf_get_data(ctx: *const gguf_context) -> *mut ::std::os::raw::c_void;
}
extern "C" {
    pub fn gguf_get_n_kv(ctx: *const gguf_context) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn gguf_find_key(
        ctx: *const gguf_context,
        key: *const ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn gguf_get_key(
        ctx: *const gguf_context,
        key_id: ::std::os::raw::c_int,
    ) -> *const ::std::os::raw::c_char;
}
extern "C" {
    pub fn gguf_get_kv_type(ctx: *const gguf_context, key_id: ::std::os::raw::c_int) -> gguf_type;
}
extern "C" {
    pub fn gguf_get_arr_type(ctx: *const gguf_context, key_id: ::std::os::raw::c_int) -> gguf_type;
}
extern "C" {
    pub fn gguf_get_val_u8(ctx: *const gguf_context, key_id: ::std::os::raw::c_int) -> u8;
}
extern "C" {
    pub fn gguf_get_val_i8(ctx: *const gguf_context, key_id: ::std::os::raw::c_int) -> i8;
}
extern "C" {
    pub fn gguf_get_val_u16(ctx: *const gguf_context, key_id: ::std::os::raw::c_int) -> u16;
}
extern "C" {
    pub fn gguf_get_val_i16(ctx: *const gguf_context, key_id: ::std::os::raw::c_int) -> i16;
}
extern "C" {
    pub fn gguf_get_val_u32(ctx: *const gguf_context, key_id: ::std::os::raw::c_int) -> u32;
}
extern "C" {
    pub fn gguf_get_val_i32(ctx: *const gguf_context, key_id: ::std::os::raw::c_int) -> i32;
}
extern "C" {
    pub fn gguf_get_val_f32(ctx: *const gguf_context, key_id: ::std::os::raw::c_int) -> f32;
}
extern "C" {
    pub fn gguf_get_val_u64(ctx: *const gguf_context, key_id: ::std::os::raw::c_int) -> u64;
}
extern "C" {
    pub fn gguf_get_val_i64(ctx: *const gguf_context, key_id: ::std::os::raw::c_int) -> i64;
}
extern "C" {
    pub fn gguf_get_val_f64(ctx: *const gguf_context, key_id: ::std::os::raw::c_int) -> f64;
}
extern "C" {
    pub fn gguf_get_val_bool(ctx: *const gguf_context, key_id: ::std::os::raw::c_int) -> bool;
}
extern "C" {
    pub fn gguf_get_val_str(
        ctx: *const gguf_context,
        key_id: ::std::os::raw::c_int,
    ) -> *const ::std::os::raw::c_char;
}
extern "C" {
    pub fn gguf_get_val_data(
        ctx: *const gguf_context,
        key_id: ::std::os::raw::c_int,
    ) -> *const ::std::os::raw::c_void;
}
extern "C" {
    pub fn gguf_get_arr_n(
        ctx: *const gguf_context,
        key_id: ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn gguf_get_arr_data(
        ctx: *const gguf_context,
        key_id: ::std::os::raw::c_int,
    ) -> *const ::std::os::raw::c_void;
}
extern "C" {
    pub fn gguf_get_arr_str(
        ctx: *const gguf_context,
        key_id: ::std::os::raw::c_int,
        i: ::std::os::raw::c_int,
    ) -> *const ::std::os::raw::c_char;
}
extern "C" {
    pub fn gguf_get_n_tensors(ctx: *const gguf_context) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn gguf_find_tensor(
        ctx: *const gguf_context,
        name: *const ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn gguf_get_tensor_offset(ctx: *const gguf_context, i: ::std::os::raw::c_int) -> size_t;
}
extern "C" {
    pub fn gguf_get_tensor_name(
        ctx: *const gguf_context,
        i: ::std::os::raw::c_int,
    ) -> *mut ::std::os::raw::c_char;
}
extern "C" {
    pub fn gguf_get_tensor_type(ctx: *const gguf_context, i: ::std::os::raw::c_int) -> ggml_type;
}
extern "C" {
    pub fn gguf_remove_key(ctx: *mut gguf_context, key: *const ::std::os::raw::c_char);
}
extern "C" {
    pub fn gguf_set_val_u8(ctx: *mut gguf_context, key: *const ::std::os::raw::c_char, val: u8);
}
extern "C" {
    pub fn gguf_set_val_i8(ctx: *mut gguf_context, key: *const ::std::os::raw::c_char, val: i8);
}
extern "C" {
    pub fn gguf_set_val_u16(ctx: *mut gguf_context, key: *const ::std::os::raw::c_char, val: u16);
}
extern "C" {
    pub fn gguf_set_val_i16(ctx: *mut gguf_context, key: *const ::std::os::raw::c_char, val: i16);
}
extern "C" {
    pub fn gguf_set_val_u32(ctx: *mut gguf_context, key: *const ::std::os::raw::c_char, val: u32);
}
extern "C" {
    pub fn gguf_set_val_i32(ctx: *mut gguf_context, key: *const ::std::os::raw::c_char, val: i32);
}
extern "C" {
    pub fn gguf_set_val_f32(ctx: *mut gguf_context, key: *const ::std::os::raw::c_char, val: f32);
}
extern "C" {
    pub fn gguf_set_val_u64(ctx: *mut gguf_context, key: *const ::std::os::raw::c_char, val: u64);
}
extern "C" {
    pub fn gguf_set_val_i64(ctx: *mut gguf_context, key: *const ::std::os::raw::c_char, val: i64);
}
extern "C" {
    pub fn gguf_set_val_f64(ctx: *mut gguf_context, key: *const ::std::os::raw::c_char, val: f64);
}
extern "C" {
    pub fn gguf_set_val_bool(ctx: *mut gguf_context, key: *const ::std::os::raw::c_char, val: bool);
}
extern "C" {
    pub fn gguf_set_val_str(
        ctx: *mut gguf_context,
        key: *const ::std::os::raw::c_char,
        val: *const ::std::os::raw::c_char,
    );
}
extern "C" {
    pub fn gguf_set_arr_data(
        ctx: *mut gguf_context,
        key: *const ::std::os::raw::c_char,
        type_: gguf_type,
        data: *const ::std::os::raw::c_void,
        n: ::std::os::raw::c_int,
    );
}
extern "C" {
    pub fn gguf_set_arr_str(
        ctx: *mut gguf_context,
        key: *const ::std::os::raw::c_char,
        data: *mut *const ::std::os::raw::c_char,
        n: ::std::os::raw::c_int,
    );
}
extern "C" {
    pub fn gguf_set_kv(ctx: *mut gguf_context, src: *mut gguf_context);
}
extern "C" {
    pub fn gguf_add_tensor(ctx: *mut gguf_context, tensor: *const ggml_tensor);
}
extern "C" {
    pub fn gguf_set_tensor_type(
        ctx: *mut gguf_context,
        name: *const ::std::os::raw::c_char,
        type_: ggml_type,
    );
}
extern "C" {
    pub fn gguf_set_tensor_data(
        ctx: *mut gguf_context,
        name: *const ::std::os::raw::c_char,
        data: *const ::std::os::raw::c_void,
        size: size_t,
    );
}
extern "C" {
    pub fn gguf_write_to_file(
        ctx: *const gguf_context,
        fname: *const ::std::os::raw::c_char,
        only_meta: bool,
    );
}
extern "C" {
    pub fn gguf_get_meta_size(ctx: *const gguf_context) -> size_t;
}
extern "C" {
    pub fn gguf_get_meta_data(ctx: *const gguf_context, data: *mut ::std::os::raw::c_void);
}
extern "C" {
    pub fn ggml_cpu_has_avx() -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn ggml_cpu_has_avx_vnni() -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn ggml_cpu_has_avx2() -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn ggml_cpu_has_avx512() -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn ggml_cpu_has_avx512_vbmi() -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn ggml_cpu_has_avx512_vnni() -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn ggml_cpu_has_avx512_bf16() -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn ggml_cpu_has_fma() -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn ggml_cpu_has_neon() -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn ggml_cpu_has_sve() -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn ggml_cpu_has_arm_fma() -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn ggml_cpu_has_metal() -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn ggml_cpu_has_f16c() -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn ggml_cpu_has_fp16_va() -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn ggml_cpu_has_wasm_simd() -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn ggml_cpu_has_blas() -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn ggml_cpu_has_cuda() -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn ggml_cpu_has_vulkan() -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn ggml_cpu_has_kompute() -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn ggml_cpu_has_gpublas() -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn ggml_cpu_has_sse3() -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn ggml_cpu_has_ssse3() -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn ggml_cpu_has_riscv_v() -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn ggml_cpu_has_sycl() -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn ggml_cpu_has_rpc() -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn ggml_cpu_has_vsx() -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn ggml_cpu_has_matmul_int8() -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn ggml_cpu_has_cann() -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn ggml_cpu_has_llamafile() -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn ggml_cpu_get_sve_cnt() -> ::std::os::raw::c_int;
}
pub type ggml_to_float_t = ::std::option::Option<
    unsafe extern "C" fn(x: *const ::std::os::raw::c_void, y: *mut f32, k: i64),
>;
pub type ggml_from_float_t = ::std::option::Option<
    unsafe extern "C" fn(x: *const f32, y: *mut ::std::os::raw::c_void, k: i64),
>;
pub type ggml_from_float_to_mat_t = ::std::option::Option<
    unsafe extern "C" fn(x: *const f32, y: *mut ::std::os::raw::c_void, nr: i64, k: i64, bs: i64),
>;
pub type ggml_vec_dot_t = ::std::option::Option<
    unsafe extern "C" fn(
        n: ::std::os::raw::c_int,
        s: *mut f32,
        bs: size_t,
        x: *const ::std::os::raw::c_void,
        bx: size_t,
        y: *const ::std::os::raw::c_void,
        by: size_t,
        nrc: ::std::os::raw::c_int,
    ),
>;
pub type ggml_gemv_t = ::std::option::Option<
    unsafe extern "C" fn(
        n: ::std::os::raw::c_int,
        s: *mut f32,
        bs: size_t,
        x: *const ::std::os::raw::c_void,
        y: *const ::std::os::raw::c_void,
        nr: ::std::os::raw::c_int,
        nc: ::std::os::raw::c_int,
    ),
>;
pub type ggml_gemm_t = ::std::option::Option<
    unsafe extern "C" fn(
        n: ::std::os::raw::c_int,
        s: *mut f32,
        bs: size_t,
        x: *const ::std::os::raw::c_void,
        y: *const ::std::os::raw::c_void,
        nr: ::std::os::raw::c_int,
        nc: ::std::os::raw::c_int,
    ),
>;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct ggml_type_traits {
    pub type_name: *const ::std::os::raw::c_char,
    pub blck_size: i64,
    pub blck_size_interleave: i64,
    pub type_size: size_t,
    pub is_quantized: bool,
    pub to_float: ggml_to_float_t,
    pub from_float: ggml_from_float_t,
    pub from_float_ref: ggml_from_float_t,
    pub from_float_to_mat: ggml_from_float_to_mat_t,
    pub vec_dot: ggml_vec_dot_t,
    pub vec_dot_type: ggml_type,
    pub nrows: i64,
    pub ncols: i64,
    pub gemv: ggml_gemv_t,
    pub gemm: ggml_gemm_t,
}
